Temporarily comment out the static 1020px widths and tracks/asset 420 widths that were stopping content collapse

--- a/app/assets/stylesheets/white_theme/footer.scss
+++ b/app/assets/stylesheets/white_theme/footer.scss
@@ -15,7 +15,8 @@
   }
   .footer_inner {
     display: flex;
-    width: 1020px;
+    flex-wrap: wrap;
+    // width: 1020px;
     margin-right: auto;
     margin-left: auto;
     .footer_column {
